# pcs

./: .gitignore  .gitmodules  README.md
CSES/: README.md
CSES/incr_array/: README.md  makefile  solution.cpp
CSES/weird_algorithm/: README.md  makefile  solution.cpp
a_poem_problem/: soln  soln.cpp
adventofcode/: README.md
adventofcode/day1/: README.md
adventofcode/day2/: README.md
adventofcode/day3/: solution.py
adventofcode/day4/: README.md  solution.py
adventofcode/day6/: solution.py
adventofcode/day8/: solution.py
code_chef/palindromic_number/: README.md  in.txt  main.cpp  makefile
codeforces/ab_matrix/: app  makefile  problem.md  soln.cpp
codeforces/number_game/: README.md
codeforces/polygon/: app  makefile  problem.md  soln.cpp  text.txt
codeforces/stone_game/: README.md  main.cpp
codeforces/the_lorax/: .gitignore  README.md  makefile
contest/problem2/: .gitignore  Makefile  solution.cpp
hacker_rank/climbing-the-leaderboard/: README.md  case.txt  makefile  solution.cpp
hacker_rank/hanging_posters/: makefile  run.zsh  soln  soln.cpp
hacker_rank/max_passengers/: .gitignore  Makefile  main.cpp
hacker_rank/min_street_lights/: .gitignore  Makefile  main.cpp
hanging_posters/: run.zsh  soln  soln.cpp
rust/: Cargo.toml
theory/: Introduction.md
theory/data_structures/: CMakeLists.txt  linked_list  linked_list.cpp  linked_list.h  main.cpp  makefile
theory/data_structures/lib/: CMakeLists.txt  linked_list.cpp  linked_list.hpp
theory/data_structures/src/: data_structures.hpp  linked_list.cpp  linked_list.hpp  main.cpp
(+282 files in other folders)
